--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "news-agg",
   "version": "1.0.0",
   "description": "RSS feed list management and content delivery system.",
-  "main": "app.js",
+  "main": "./source/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./source/app.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/ActiveAvi/news-agg/issues"
   },
-  "homepage": "https://github.com/ActiveAvi/news-agg#readme"
+  "homepage": "https://github.com/ActiveAvi/news-agg#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "type": "commonjs"
 }
